<resources>
  <string name="app_name">InterviewPrep</string>

  <string name="action_settings">Settings</string>

  <string name="play_error_message">Unable to process request. (%s)</string>
  <string name="error_dismiss">Dismiss</string>
  <string name="login_failure_message">Unable to sign in with the provided credentials.</string>
  <string name="sign_out">Sign out</string>
  <string name="title_activity_main2">MainActivity</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Interview Prep</string>
  <string name="nav_header_subtitle"></string>
  <string name="nav_header_desc">Interview Prep</string>

  <string name="menu_question">Questions</string>
  <string name="menu_detail">Question Detail</string>
  <string name="menu_quiz">Quiz</string>
  <string name="menu_history">History</string>
  <string name="question_hint">Enter Question</string>
  <string name="save_label">Save</string>
  <string name="cancel_label">Cancel</string>
  <string name="answer_hint">Answer</string>
  <string name="source_hint">Source</string>
  <string name="adds_a_new_question_label">Adds a new Question</string>
  <string name="new_quiz">New Quiz</string>
  <string name="user_answer">My Answer:</string>
  <string name="answer">Answer:</string>
  <string name="submit">Submit</string>
  <string name="show_answer">Show Answer</string>
  <string name="show_answer_button">Show Answer</string>
  <string name="hide_answer_button">Hide Answer</string>

  <string name="quiz_length_pref_title">Quiz length</string>
  <string name="quiz_length_pref_key">quiz_length_pref</string>

</resources>