<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  tools:showIn="navigation_view">

  <group android:checkableBehavior="single">
    <item
      android:id="@+id/nav_question"
      android:icon="@drawable/ic_baseline_question_answer_24"
      android:title="@string/menu_question"/>
    <item
      android:id="@+id/nav_detail"
      android:icon="@drawable/ic_menu_gallery"
      android:title="@string/menu_detail"/>
    <item
      android:id="@+id/nav_quiz"
      android:icon="@drawable/ic_baseline_queue_play_next_24"
      android:title="@string/menu_quiz"/>

    <item
      android:id="@+id/nav_history"
      android:icon="@android:drawable/ic_menu_recent_history"
      android:title="@string/menu_history"/>
  </group>
</menu>