<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/mobile_navigation"
  app:startDestination="@+id/nav_question">

  <fragment
    android:id="@+id/nav_question"
    android:label="@string/menu_question"
    android:name="edu.cnm.deepdive.interviewprep.controller.QuestionFragment"
    tools:layout="@layout/fragment_question">

    <argument
      android:name="question_id"
      app:argType="string"
      android:defaultValue="0"
      />

    <action
      android:id="@+id/open_question_detail"
      app:destination="@id/nav_detail">

      <argument
        android:name="question_id"
        app:argType="string"
        android:defaultValue="0"/>
    </action>
  </fragment>

  <fragment
    android:id="@+id/nav_detail"
    android:label="@string/menu_detail"
    android:name="edu.cnm.deepdive.interviewprep.controller.DetailFragment"
    tools:layout="@layout/fragment_detail"/>

  <fragment
    android:id="@+id/nav_quiz"
    android:label="@string/menu_quiz"
    android:name="edu.cnm.deepdive.interviewprep.controller.QuizFragment"
    tools:layout="@layout/fragment_quiz"/>

  <fragment
    android:id="@+id/nav_history"
    android:label="@string/menu_history"
    android:name="edu.cnm.deepdive.interviewprep.controller.HistoryFragment"
    tools:layout="@layout/fragment_history"/>
</navigation>