<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  tools:context=".controller.EditQuestionFragment">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/half_dynamic_spacing">

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/question_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/half_dynamic_spacing"
      app:hintEnabled="true"
      app:hintAnimationEnabled="true"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toStartOf="@id/save">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:minLines="1"
        android:maxLines="6"
        android:hint="@string/question_hint"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
      android:id="@+id/save"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="@dimen/half_dynamic_spacing"
      android:src="@drawable/ic_check_black_24dp"
      android:tint="@color/submit"
      android:background="?android:selectableItemBackgroundBorderless"
      app:layout_constraintTop_toTopOf="@id/question_layout"
      app:layout_constraintEnd_toStartOf="@id/cancel"
      app:layout_constraintBottom_toBottomOf="@id/question_layout"
      android:contentDescription="@string/save_label"/>

    <ImageButton
      android:id="@+id/cancel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="@dimen/half_dynamic_spacing"
      android:src="@drawable/ic_close_black_24dp"
      android:tint="@color/cancel"
      app:layout_constraintTop_toTopOf="@id/question_layout"
      app:layout_constraintBottom_toBottomOf="@id/question_layout"
      app:layout_constraintEnd_toEndOf="parent"
      android:contentDescription="@string/cancel_label"/>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/answer_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/half_dynamic_spacing"
      app:hintEnabled="true"
      app:hintAnimationEnabled="true"
      app:layout_constraintTop_toBottomOf="@id/question_layout"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toTopOf="@id/source_layout">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:minLines="1"
        android:maxLines="6"
        android:hint="@string/answer_hint"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/source_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/half_dynamic_spacing"
      app:hintEnabled="true"
      app:hintAnimationEnabled="true"
      app:layout_constraintTop_toBottomOf="@id/answer_layout"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/source"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:minLines="1"
        android:maxLines="6"
        android:hint="@string/source_hint"/>

    </com.google.android.material.textfield.TextInputLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>